--- a/mini-projects/depot-app/app/views/products/_form.html.erb
+++ b/mini-projects/depot-app/app/views/products/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
+    <%= f.text_area :description, rows: 6 %>
+  <div>
   <div class="field">
     <%= f.label :image_url %><br />
     <%= f.text_field :image_url %>
