Added a time to the side bar. Modified the CSS. Changed the test fixtures to be valid data should the test for the validation of unique titles be used.

--- a/mini-projects/depot-app/app/views/layouts/application.html.erb
+++ b/mini-projects/depot-app/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <li><a href="http://www.../news">News</a></li>
         <li><a href="http://www.../contact">Contact</a></li>
       </ul>
+      <p>Time: <%= Time.now.strftime("%I:%M%p (GMT -8)") %></p>
     </div>
     <div id="main">
       <%= yield %>
