--- a/mini-projects/depot-app/app/views/store/index.html.erb
+++ b/mini-projects/depot-app/app/views/store/index.html.erb
@@ -10,7 +10,7 @@
   <h3><%= product.title %></h3>
   <div class="desc"><%= sanitize product.description %></div>
   <div class="desc"> <!--Seperate blocks on purpose.. -->
-    <span class="price"><%= product.price %></span>
+    <span class="price"><%= number_to_currency product.price %></span>
   </div>
 </div>
 <% end %>
