--- a/mini-projects/depot-app/app/views/store/index.html.erb
+++ b/mini-projects/depot-app/app/views/store/index.html.erb
@@ -11,6 +11,7 @@
   <div class="desc"><%= sanitize product.description %></div>
   <div class="desc"> <!--Seperate blocks on purpose.. -->
     <span class="price"><%= number_to_currency product.price %></span>
+    <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
   </div>
 </div>
 <% end %>
