--- a/mini-projects/depot-app/app/views/layouts/application.html.erb
+++ b/mini-projects/depot-app/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
   <div id="columns">
     <div id="side">
       <ul>
-        <li><a href="http://www...">Home</a></li>
-        <li><a href="http://www.../faq">Faq</a></li>
-        <li><a href="http://www.../news">News</a></li>
-        <li><a href="http://www.../contact">Contact</a></li>
+        <li><%= link_to 'Store', store_path %></li>
+        <li><%= link_to 'Admin', products_path %></li>
+        <!-- <li><a href="http://www.../news">News</a></li> -->
+        <!-- <li><a href="http://www.../contact">Contact</a></li> -->
       </ul>
-      <p>Time: <%= Time.now.strftime("%I:%M%p (GMT -8)") %></p>
+      <p>Time: <%= Time.now.strftime("%I:%M%p GMT %z") %></p>
     </div>
     <div id="main">
       <%= yield %>
