--- a/mini-projects/depot-app/app/views/store/index.html.erb
+++ b/mini-projects/depot-app/app/views/store/index.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 <% end %>
 
-<h1>Your Pragmatic Catalog</h1>
+<h1>Your Pragmatic Catalog <%= "(accessed #{@count} times)" if @count >= 5 %></h1>
 
 <% @products.each do |product| %>
 <div class="entry">
