--- a/mini-projects/depot-app/app/views/carts/show.html.erb
+++ b/mini-projects/depot-app/app/views/carts/show.html.erb
@@ -5,7 +5,7 @@
 <h2>Your Pragmatic Cart</h2>
 <ul>
   <% @cart.line_items.each do |item| %>
-  <li><%= item.quantity.to_s + "x " if item.quantity > 1 %><%= item.product.title %></li>
+  <li><%= item.quantity.to_s + "x " if item.quantity.to_i > 1 %><%= item.product.title %></li>
   <% end %>
 </ul>
 <%= link_to 'Back to Store', store_path %>
