--- a/mini-projects/depot-app/app/views/layouts/application.html.erb
+++ b/mini-projects/depot-app/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
   </div>
   <div id="columns">
     <div id="side">
+      <div id="cart">
+        <%= render @cart %>
+      </div>
+
       <ul>
         <li><%= link_to 'Store', store_path %></li>
         <li><%= link_to 'Admin', products_path %></li>
