Got Jquery UI working FINALLY...

--- a/mini-projects/depot-app/app/views/line_items/_line_item.html.erb
+++ b/mini-projects/depot-app/app/views/line_items/_line_item.html.erb
@@ -1,4 +1,10 @@
-<tr>
+<%# encoding: utf-8%>
+
+<% if @current_line == line_item %>
+<tr id="current_item">
+<% else %>
+<tr> <!-- <%= @current_item %> -->
+<% end %>
   <td><%= line_item.quantity %></td>
   <td><%= line_item.product.title %></td>
   <td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
